# pandera-catalog

./: .buildinfo  .gitignore  README.md  coverage.json  developer_testing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart_guide.html  search.html  searchindex.js  sg_execution_times.html
.doctrees/: developer_testing.doctree  environment.pickle  index.doctree  quickstart_guide.doctree  sg_execution_times.doctree
.doctrees/api/: modules.doctree
.doctrees/auto_examples/: 01_basic_catalog_usage.doctree  02_load_schema_from_yaml.doctree  03_schema_projection.doctree  04_backend_view_reader.doctree  index.doctree  sg_execution_times.doctree
.doctrees/user_guide/: 00_catalog_basics.doctree  01_schema_projections.doctree  02_loading_schemas_from_yaml.doctree  03_schema_lifecycle.doctree  04_view_reader.doctree  (+1 more)
_modules/: index.html
_sources/: sg_execution_times.rst
api/: modules.html
auto_examples/: 01_basic_catalog_usage.html  02_load_schema_from_yaml.html  03_schema_projection.html  04_backend_view_reader.html  index.html  sg_execution_times.html
docs/: conf.py  developer_testing.rst  index.rst  quickstart_guide.rst  user_guide.rst
examples/: 01_basic_catalog_usage.py  04_backend_view_reader.py  README.rst
pandera_catalog/: __init__.py  catalog.py  reader.py  schemas.py  types.py
tests/: conftest.py  test_catalog.py  test_package_init.py  test_sql_backend.py  test_view_reader.py
user_guide/: 00_catalog_basics.html  01_schema_projections.html  02_loading_schemas_from_yaml.html  03_schema_lifecycle.html  04_view_reader.html  index.html
(+47 files in other folders)
