[project]
name = "pandera-catalog"
version = "0.1.0"
description = "A database-backed catalog for defining and managing Pandera schemas."
authors = [
    { name = "Greg Elphick", email = "11791585+elphick@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.14"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pandera>=0.19",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
schema = ["pydantic>=2.0"]
viz = ["plotly>=6.0,<7"]
all = [
    "pydantic>=2.0",
    "plotly>=6.0,<7",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=7.0",
    "coverage>=7.8,<8",
    "sphinx>=7.3,<8",
    "sphinx-autodoc-typehints>=2.1,<3",
    "sphinx-book-theme>=1.2,<2",
    "myst-parser>=3.0,<4",
    "sphinx-gallery>=0.14,<1",
    "matplotlib>=3.7,<4",
]

[tool.pytest.ini_options]
markers = [
    "integration: multi-layer tests that cross module boundaries",
    "slow: expensive tests excluded from the default fast lane",
]

[tool.coverage.run]
branch = true
source = ["pandera_catalog"]

[tool.coverage.report]
show_missing = true
skip_covered = false
omit = [
    "tests/*",
    "test_*.py",
    "docs/*",
    "examples/*",
    "scratch/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pandera_catalog"]
